--- a/icingaexchange.yml
+++ b/icingaexchange.yml
@@ -8,14 +8,19 @@ type: Plugin
 license: gplv2
 releases: 
   - 
-    name: 1.0
-    description: "1.0 Release"
+    name: 1.1
+    description: "1.1 Release"
     files: 
       - 
         name: check_autoit.bat
         url: "file:///check_autoit.bat"
         description: none
         checksum: fc4e42505b5b11d9f6b4dcdba341a7af
+      - 
+        name: check_autoit.ps1
+        url: "file:///check_autoit.ps1"
+        description: none
+        checksum: c188278b44a6b20cd1406629100edc6f
       - 
         name: wikisearch.au3
         url: "file:///wikisearch.au3"
@@ -31,4 +36,3 @@ releases:
         url: "file:///wikisearch.ini"
         description: none
         checksum: 3ec4b845be71f89199ddaa9f9ded817a
-
